--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,11 @@ yarn-error.log*
 
 # Using yarn
 package-lock.json
+
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
